--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
         <select id="select-model"  name="modal" aria-placeholder="Select the model">
             <option value="Thought">Thoughtful AI</option>
             <option value="ChatGPT">ChatGPT</option>
-            <option value="BedRock">BedRock</option>
+<!--             <option value="BedRock">BedRock</option> -->
             <option value="RAG">Augmented AI</option>
         </select>
     </div>
