--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
             background-color: #d6eac5;
             color: #232528c9;
             text-align: left;
-            padding: 10px;
+            padding: 10px 40px 10px 40px;
             margin: 5px 0;
             border-radius: 5px 5px 0 0;
             display: flex;
@@ -128,7 +128,7 @@
             background-color: #343540;
             color: #ffffff;
             text-align: left;
-            padding: 10px;
+            padding: 10px 90px 10px 90px;
             margin: 5px 0;
             border-radius: 0px 0px 5px 5px;
             margin-bottom: 10px;
